# dictate

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSES.md  README.md  Readme.md  SECURITY.md  app.py  benchmark.py  gui.py  pyproject.toml  requirements.txt  setup_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Cask/: dictate.rb
assets/: README.md
demo/: preflight.sh
dictate/: __init__.py  audio.py  config.py  llm_discovery.py  menubar.py  menubar_main.py  model_download.py  output.py  presets.py  transcribe.py
scripts/: build-app.sh
tests/: test_audio_extended.py  test_cli_flags.py  test_config_cache.py  test_icons_extended.py  test_menubar.py  test_model_download.py  test_model_download_extended.py  test_output_extended.py  test_robustness.py
